# 3DScanning_and_MotionCapture

./: .gitignore
CameraIntrinsics/: CMakeLists.txt  main.cpp
CoarseAlignment/: CMakeLists.txt  ProcrustesAligner.h  main.cpp
CoarseAlignment/results/: bunny_procrustes.off
ICP/: CMakeLists.txt  FreeImageHelper.cpp  FreeImageHelper.h  ICPOptimizer.h  NearestNeighbor.h  PointCloud.h  ProcrustesAligner.h  SimpleMesh.h  VirtualSensor.h  main.cpp  vcpkg-configuration.json  vcpkg.json
Optimization/: CMakeLists.txt  dragon.cpp  gaussian.cpp  surface.cpp  vcpkg.json
Optimization/outputs/: dragon_out.txt  gaussian_out.txt  surface_out.txt
SurfaceRepresentations/: CMakeLists.txt  ImplicitSurface.h  MarchingCubes.h  main.cpp
